force-app/main/default/objects/Mileage_Details__c/Mileage_Details__c.object-meta.xml
<CustomObject>
    <label>Mileage Details</label>
    <nameField>
        <displayFormat>MD-{00000000}</displayFormat>
        <label>Mileage Details No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mileage Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>