force-app/main/default/objects/Mileage_Details__c/fields/Expiring_In__c.field-meta.xml
<CustomField>
    <fullName>Expiring_In__c</fullName>
    <label>Expiring In</label>
    <type>Date</type>
</CustomField>