force-app/main/default/objects/Mileage_Details__c/fields/Expiring_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Mileage__c</fullName>
    <label>Expiring Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>