force-app/main/default/objects/Mileage_Details__c/fields/Passenger_ID__c.field-meta.xml
<CustomField>
    <fullName>Passenger_ID__c</fullName>
    <label>Passenger ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mileage Details</relationshipLabel>
    <relationshipName>Mileage_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>